fix products alignment small screens

--- a/src/assets/sass/sections/_products.scss
+++ b/src/assets/sass/sections/_products.scss
@@ -42,6 +42,7 @@
                 }
 
                 @media only screen and (max-width: $bp-medium) {
+                    padding: 3rem 0;
                     text-align: center;
                 }
             }
